compiler/tests/fa/errors/uchar_multi.salam
// انتظار: codepoint
// زبان: فارسی
تابع اصلی:
    مقدار := u"AB"
    چاپ مقدار
تمام
